# vigilant-vantage

./: README.md
about-loam/: .gitignore  README.md
about-loam/src/loam_implementation/: CMakeLists.txt  package.xml
about-loam/src/loam_implementation/include/loam_implementation/: Utilities.hpp
about-loam/src/loam_implementation/src/: Utilities.cpp
calibration-room/0.3.0/: README.md  bashrc.txt
calibration-room/0.3.0/auto_pose_estimation/data/: cona_urdf_example.urdf
calibration-room/0.3.0/auto_pose_estimation/src/depth_center_finder/: CMakeLists.txt  notes.txt  package.xml
calibration-room/0.3.0/auto_pose_estimation/src/depth_center_finder/include/depth_center_finder/: DepthCenterFinder.hpp
calibration-room/0.3.0/auto_pose_estimation/src/depth_center_finder/launch/: depth_center_finder_launch.launch
calibration-room/0.3.0/auto_pose_estimation/src/depth_center_finder/params/: depth_center_finder_params.yaml
calibration-room/0.3.0/auto_pose_estimation/src/depth_center_finder/src/: DepthCenterFinder.cpp  DepthCenterFinderCallbacks.cpp  depth_center_finder.cpp
calibration-room/0.3.0/auto_pose_estimation/src/depth_chessboard_pose_estimator/: 90-customized_camera_rules.rules  CMakeLists.txt  package.xml
calibration-room/0.3.0/auto_pose_estimation/src/depth_chessboard_pose_estimator/include/depth_chessboard_pose_estimator/: DepthChessboardPoseEstimator.hpp
calibration-room/0.3.0/auto_pose_estimation/src/depth_chessboard_pose_estimator/launch/: all_pose_estimator_launch.launch  depth_chessboard_pose_estimator_launch.launch
calibration-room/0.3.0/auto_pose_estimation/src/depth_chessboard_pose_estimator/params/: depth_chessboard_pose_estimator_params.yaml
calibration-room/0.3.0/auto_pose_estimation/src/depth_chessboard_pose_estimator/scripts/: create_camera_rules
calibration-room/0.3.0/auto_pose_estimation/src/depth_chessboard_pose_estimator/src/: DepthChessboardPoseEstimator.cpp  DepthChessboardPoseEstimatorCallbacks.cpp  depth_chessboard_pose_estimator.cpp
calibration-room/0.3.0/auto_pose_estimation/src/depth_pose_estimator/: CMakeLists.txt
calibration-room/0.3.0/auto_pose_estimation/src/lidar_pose_estimator/: package.xml
calibration-room/0.3.0/auto_pose_estimation/src/ls01b_ros/: CMakeLists.txt  README.md
calibration-room/0.3.0/pose_estimation_gui/client/: index.html  package-lock.json  package.json  tsconfig.json
calibration-room/0.3.0/pose_estimation_gui/client/src/: main.ts  routes.ts
calibration-room/0.3.0/pose_estimation_gui/server/: package-lock.json  package.json
calibration-room/0.3.0/pose_estimation_gui/server/src/: index.ts
calibration-room/0.4.0/: bashrc.txt
calibration-room/0.4.0/auto_pose_estimation/data/: cona_camera_params_template.yaml  my_stereo_s_u3.launch
calibration-room/0.4.0/auto_pose_estimation/src/camera_pose_estimator/: CMakeLists.txt
calibration-room/0.4.0/auto_pose_estimation/src/camera_pose_estimator/include/camera_pose_estimator/: CameraPoseEstimator.hpp
calibration-room/0.4.0/auto_pose_estimation/src/camera_pose_estimator/launch/: camera_pose_estimator_node.launch
calibration-room/0.4.0/auto_pose_estimation/src/camera_pose_estimator/params/: camera_pose_estimator_params.yaml
calibration-room/0.4.0/auto_pose_estimation/src/camera_pose_estimator/src/: CameraPoseEstimator.cpp
calibration-room/0.4.0/pose_estimation_gui/client/: package-lock.json  package.json
calibration-room/0.4.0/pose_estimation_gui/client/public/: style.css  webviz.html
calibration-room/0.4.0/pose_estimation_gui/server/: cona.urdf  package-lock.json  package.json
calibration-room/1.0.0/: bashrc.txt
calibration-room/1.0.0/auto_pose_estimation/data/: cona_stereo_s_u3.launch  left_part_guard.STL  my_camera_params_template.yaml  right_part_guard.STL
calibration-room/1.0.0/auto_pose_estimation/src/aruco_generator/: CMakeLists.txt  package.xml
calibration-room/1.0.0/auto_pose_estimation/src/aruco_generator/include/aruco_generator/: dummy.txt
calibration-room/1.0.0/auto_pose_estimation/src/aruco_generator/src/: aruco_generation.cpp
calibration-room/1.0.0/auto_pose_estimation/src/depth_pose_estimator/: CMakeLists.txt  package.xml
calibration-room/1.0.0/auto_pose_estimation/src/depth_pose_estimator/include/depth_pose_estimator/: DepthPoseEstimator.hpp  DoubleDepthPoseEstimator.hpp
calibration-room/1.0.0/auto_pose_estimation/src/depth_pose_estimator/launch/: depth_pose_estimator_launch.launch  double_depth_pose_estimator_launch.launch  double_depth_pose_estimator_node.launch  integrated_pose_estimator_launch.launch  new_pose_estimator_launch.launch
calibration-room/1.0.0/auto_pose_estimation/src/depth_pose_estimator/params/: depth_pose_estimator_params.yaml  double_depth_pose_estimator_params.yaml
calibration-room/1.0.0/auto_pose_estimation/src/depth_pose_estimator/src/: DepthPoseEstimator.cpp  DepthPoseEstimatorCallbacks.cpp  DoubleDepthPoseEstimator.cpp  DoubleDepthPoseEstimatorCallbacks.cpp  depth_pose_estimator.cpp  double_depth_pose_estimator.cpp
calibration-room/1.0.0/auto_pose_estimation/src/lidar_pose_estimator/: CMakeLists.txt
calibration-room/1.0.0/auto_pose_estimation/src/lidar_pose_estimator/data/: lidar_01_reference.txt  lidar_02_reference.txt  lidar_raw_reference.txt  lidar_standard_calculation.txt  lidar_standard_reference.txt  old_lidar_02_reference.txt
calibration-room/1.0.0/auto_pose_estimation/src/lidar_pose_estimator/include/lidar_pose_estimator/: ICP.hpp  LidarPoseEstimator.hpp
calibration-room/1.0.0/auto_pose_estimation/src/lidar_pose_estimator/launch/: lidar_pose_estimator_launch.launch  lidar_pose_estimator_node.launch
calibration-room/1.0.0/auto_pose_estimation/src/lidar_pose_estimator/src/: ICP.cpp  LidarPoseEstimator.cpp  LidarPoseEstimatorCallbacks.cpp
calibration-room/1.0.0/pose_estimation_gui/: rush.json
calibration-room/1.0.0/pose_estimation_gui/client/: index.html  package-lock.json  package.json
calibration-room/1.0.0/pose_estimation_gui/server/: cona.urdf  cona_backup.urdf  cona_standard.urdf  package-lock.json
other-programs/: notice.txt
(+90 files in other folders)
